--- a/developing.ipynb
+++ b/developing.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b4dc40bd-c36e-47fd-ae0e-b5de5cca3f0c",
    "metadata": {
     "tags": []
@@ -696,12 +696,12 @@
     }
    ],
    "source": [
-    "plot_meas_coords(tank=tank, meas_coords=coordinates, p_select=None)"
+    "plot_meas_coords(tank=tank, meas_coords=coordinates, p_select=None, save_img=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "9c15170a-4638-4921-bb46-af14acd20e8a",
    "metadata": {
     "tags": []
@@ -719,7 +719,7 @@
     }
    ],
    "source": [
-    "plot_meas_coords_wball(tank=tank, meas_coords=coordinates, ball=ball, p_select=34)"
+    "plot_meas_coords_wball(tank=tank, meas_coords=coordinates, ball=ball, p_select=34, save_img=True)"
    ]
   },
   {
