--- a/developing.ipynb
+++ b/developing.ipynb
@@ -513,9 +513,7 @@
     "    v = np.linspace(0, np.pi, bwl_pts)\n",
     "    x_c = meas_coords[p_select, 0] + ball.r * np.outer(np.cos(u), np.sin(v))\n",
     "    y_c = meas_coords[p_select, 1] + ball.r * np.outer(np.sin(u), np.sin(v))\n",
-    "    z_c = meas_coords[p_select, 2] + ball.r * np.outer(\n",
-    "        np.ones(np.size(u)), np.cos(v)\n",
-    "    )\n",
+    "    z_c = meas_coords[p_select, 2] + ball.r * np.outer(np.ones(np.size(u)), np.cos(v))\n",
     "\n",
     "    fig = plt.figure()\n",
     "    ax = fig.add_subplot(111, projection=\"3d\")\n",
@@ -565,7 +563,7 @@
     }
    ],
    "source": [
-    "plot_meas_coords(tank=tank, meas_coords=meas_coords, p_select=None, elev=20,azim=10)"
+    "plot_meas_coords(tank=tank, meas_coords=meas_coords, p_select=None, elev=20, azim=10)"
    ]
   },
   {
@@ -573,7 +571,6 @@
    "id": "3d5c11dd-d448-47cc-8f5a-8c9f0690350e",
    "metadata": {},
    "source": [
-    "<a id=\"WIP\"></a>\n",
     "## 5. Testing the current state"
    ]
   },
@@ -587,7 +584,11 @@
    "outputs": [],
    "source": [
     "from src.classes import BallObjectProperties, HitBox, TankProperties32x2\n",
-    "from src.functions import compute_hitbox, create_meas_coordinates, print_coordinates_props\n",
+    "from src.functions import (\n",
+    "    compute_hitbox,\n",
+    "    create_meas_coordinates,\n",
+    "    print_coordinates_props,\n",
+    ")\n",
     "from src.visualization import plot_meas_coords, plot_meas_coords_wball"
    ]
   },
@@ -719,13 +720,24 @@
     }
    ],
    "source": [
-    "plot_meas_coords_wball(tank=tank, meas_coords=coordinates, ball=ball, p_select=34, save_img=True)"
+    "plot_meas_coords_wball(\n",
+    "    tank=tank, meas_coords=coordinates, ball=ball, p_select=34, save_img=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f493f709-be25-41e4-9647-0e502e796fc0",
+   "metadata": {},
+   "source": [
+    "<a id=\"WIP\"></a>\n",
+    "## 6. Build IPyWidget for sliding throught the different measurement points"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a779a24-7913-46d5-b33d-dec2d1150002",
+   "id": "539af941-1337-4983-9b89-ceaa3b9a5117",
    "metadata": {},
    "outputs": [],
    "source": []
