prep for ender 5 connection

--- a/developing.ipynb
+++ b/developing.ipynb
@@ -730,14 +730,166 @@
    "id": "f493f709-be25-41e4-9647-0e502e796fc0",
    "metadata": {},
    "source": [
-    "<a id=\"WIP\"></a>\n",
     "## 6. Build IPyWidget for sliding throught the different measurement points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "539af941-1337-4983-9b89-ceaa3b9a5117",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# optional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85bfac64-fc4e-4b05-b92d-8f283beb165b",
+   "metadata": {},
+   "source": [
+    "## 7. create `.json` <-> `measurement_dict` combination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b31ae846-87b3-436c-a773-a18a2d5b6114",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "from datetime import datetime\n",
+    "\n",
+    "from sciopy.sciopy_dataclasses import ScioSpecMeasurementSetup\n",
+    "\n",
+    "from src.classes import BallObjectProperties, HitBox, TankProperties32x2\n",
+    "from src.functions import compute_hitbox\n",
+    "\n",
+    "tank = TankProperties32x2()\n",
+    "ball = BallObjectProperties(x=0, y=0, z=0, r=20, material=None)\n",
+    "hitbox = compute_hitbox(tank, ball, safety_tolerance=0)\n",
+    "\n",
+    "ssms = ScioSpecMeasurementSetup(\n",
+    "    burst_count=1,  # The number of measurements to be performed.\n",
+    "    total_meas_num=10,  # Repetitions of burst count\n",
+    "    n_el=64,  # Set 16, 32, 48 or 64 and do not forget to change the channel_group.\n",
+    "    channel_group=[\n",
+    "        1,\n",
+    "        2,\n",
+    "        3,\n",
+    "        4,\n",
+    "    ],  # Use [1] for n_el=16, [1,2] for n_el=32, [1,2,3] for n_el=48, and [1,2,3,4] for n_el=64\n",
+    "    exc_freq=10_000,  # 10,000Hz = 10kHz\n",
+    "    framerate=5,  # Measurements per second\n",
+    "    amplitude=0.01,  # 0.01A = 10mA (maximum)\n",
+    "    inj_skip=0,  # injection electrode skip\n",
+    "    gain=1,\n",
+    "    adc_range=1,  # +/- 1V\n",
+    "    notes=\"None\",  # add measurement information\n",
+    "    configured=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "808421ec-ef4a-4f5a-abf3-5a9a64f56725",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def create_measurement_directory(\n",
+    "    meas_dir: str = \"measurements/\",\n",
+    ") -> Tuple[str, str]:\n",
+    "    today = datetime.now()\n",
+    "    f_name = today.strftime(\"%d_%m_%Y_%Hh_%Mm\")\n",
+    "    s_path = f\"{meas_dir}{f_name}\"\n",
+    "    os.mkdir(s_path)\n",
+    "    s_path += \"/\"\n",
+    "    return s_path, f_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d0337290-c854-4962-8334-5cf6c367f1b4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "measurements/12_10_2023_08h_05m/ 12_10_2023_08h_05m\n"
+     ]
+    }
+   ],
+   "source": [
+    "s_path,f_name = create_measurement_directory()\n",
+    "print(s_path,f_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5471efec-a429-4d05-9065-62c89ea368fe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def save_parameters_to_json_file(\n",
+    "    s_path:str,\n",
+    "    ssms: ScioSpecMeasurementSetup,\n",
+    "    tank: TankProperties32x2,\n",
+    "    ball: BallObjectProperties,\n",
+    "    hitbox: HitBox,\n",
+    ") -> None:\n",
+    "    today = datetime.now()\n",
+    "    ssms_dict = ssms.__dict__\n",
+    "    tank_dict = tank.__dict__\n",
+    "    ball_dict = ball.__dict__\n",
+    "    hitbox_dict = hitbox.__dict__\n",
+    "    \n",
+    "    combined_json = {\n",
+    "        \"DateTime\":today.strftime(\"%d.%m.%Y %H:%M\"),\n",
+    "        \"ScioSpecMeasurementSetup\": ssms_dict,\n",
+    "        \"TankProperties32x2\": tank_dict,\n",
+    "        \"BallObjectProperties\": ball_dict,\n",
+    "        \"HitBox\": hitbox_dict,\n",
+    "    }\n",
+    "\n",
+    "    combined_json_str = json.dumps(combined_json, indent=4)\n",
+    "\n",
+    "    with open(s_path+\"info.json\", \"w\") as file:\n",
+    "        file.write(combined_json_str)\n",
+    "\n",
+    "\n",
+    "# Usage\n",
+    "save_parameters_to_json_file(s_path, ssms, tank, ball, hitbox)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "599785b7-8880-43e4-a95e-0affd7bfd450",
+   "metadata": {},
+   "source": [
+    "<a id=\"WIP\"></a>\n",
+    "## 8. Connect Ender 5 and check the movements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5cb58e0-133b-43a2-aa40-d35f0245a62e",
    "metadata": {},
    "outputs": [],
    "source": []
