--- a/developing.ipynb
+++ b/developing.ipynb
@@ -882,13 +882,12 @@
    "id": "599785b7-8880-43e4-a95e-0affd7bfd450",
    "metadata": {},
    "source": [
-    "<a id=\"WIP\"></a>\n",
     "## 8. Connect Ender 5 and check the movements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d5cb58e0-133b-43a2-aa40-d35f0245a62e",
    "metadata": {},
    "outputs": [],
@@ -928,6 +927,14 @@
     "    motion_speed=2_500,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3584cdd-5bbe-439a-8e1c-ccc947699422",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1001,12 +1008,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4d0954c2-b8af-416a-b8a1-e784b1601ec7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ender5Stat(abs_x_pos=180, abs_y_pos=180, abs_z_pos=0, tank_architecture=TankProperties32x2(T_d=194, T_r=97, T_bx=(-97.0, 97.0), T_by=(-97.0, 97.0), T_bz=(0, 148), E_zr1=50, E_zr2=100, n_el=64), motion_speed=2500)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "enderstat.motion_speed = 1500"
+    "enderstat"
    ]
   },
   {
@@ -1092,6 +1110,194 @@
    "source": [
     "enderstat"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95897833-17ab-4e76-9e66-c4b2e1f0b786",
+   "metadata": {},
+   "source": [
+    "<a id=\"WIP\"></a>\n",
+    "## 9. Center Phantom Tank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d98dd5a7-912d-4477-99e4-7642c3d4f394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.classes import Ender5Stat, TankProperties32x2, BallObjectProperties\n",
+    "from src.functions import compute_hitbox\n",
+    "from src.ender5 import (\n",
+    "    init_ender5,\n",
+    "    x_y_center,\n",
+    "    move_to_absolute_x_y_z,\n",
+    "    move_ender_to_coordinate,\n",
+    "    turn_off_fan,\n",
+    "    read_temperature,\n",
+    "    x_y_z_home,\n",
+    ")\n",
+    "from sciopy import available_serial_ports, connect_COM_port\n",
+    "\n",
+    "from src.functions import create_meas_coordinates\n",
+    "from src.visualization import plot_meas_coords\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5cac7c21-27d3-4d7e-9636-2f5ca9e53537",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['COM1', 'COM4']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "available_serial_ports()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7af7752a-1d34-49b9-86d4-ebba826174fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection to COM4 is established.\n"
+     ]
+    }
+   ],
+   "source": [
+    "COM_Ender = connect_COM_port(port=\"COM4\", baudrate=115200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a45f17f7-9ddf-41e6-901e-17efb1c54361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enderstat = Ender5Stat(\n",
+    "    abs_x_pos=None,\n",
+    "    abs_y_pos=None,\n",
+    "    abs_z_pos=None,\n",
+    "    tank_architecture=TankProperties32x2(),\n",
+    "    motion_speed=2_500,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8a97b2f5-75a7-4f2e-87c5-db44a0f30d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# init axis\n",
+    "init_ender5(COM_Ender, enderstat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "13dec8c4-906d-4011-9f2e-d7de64ddab13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mSignature:\u001b[0m\n",
+       "\u001b[0mx_y_z_home\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m    \u001b[0mser\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mserial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mserialwin32\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSerial\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m    \u001b[0menderstat\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0msrc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEnder5Stat\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m    \u001b[0mprint_msg\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mDocstring:\u001b[0m\n",
+       "Move x,y=180 and z=0.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "ser : serial.serialwin32.Serial\n",
+       "    serial connection\n",
+       "enderstat : Ender5Stat\n",
+       "    ender 5 dataclass\n",
+       "print_msg : bool, optional\n",
+       "    print log, by default False\n",
+       "\u001b[1;31mFile:\u001b[0m      c:\\users\\sciospeceit\\desktop\\3dit\\src\\ender5.py\n",
+       "\u001b[1;31mType:\u001b[0m      function"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "?x_y_z_home"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8645387e-9a1d-4c31-ad28-315d3bb30588",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'ok\\n'\n",
+      "Ender5Stat(abs_x_pos=180, abs_y_pos=180, abs_z_pos=0, tank_architecture=TankProperties32x2(T_d=194, T_r=97, T_bx=(-97.0, 97.0), T_by=(-97.0, 97.0), T_bz=(0, 148), E_zr1=50, E_zr2=100, n_el=64), motion_speed=2500)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# validate mid position\n",
+    "x_y_z_home(COM_Ender, enderstat, print_msg=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "498d86e2-6466-473b-a3f7-a8531bc9bdda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'ok\\n'\n",
+      "Ender5Stat(abs_x_pos=180, abs_y_pos=180, abs_z_pos=0, tank_architecture=TankProperties32x2(T_d=194, T_r=97, T_bx=(-97.0, 97.0), T_by=(-97.0, 97.0), T_bz=(0, 148), E_zr1=50, E_zr2=100, n_el=64), motion_speed=2500)\n"
+     ]
+    }
+   ],
+   "source": [
+    "enderstat.abs_z_pos = 0\n",
+    "enderstat.abs_x_pos = 180  # -200/2\n",
+    "enderstat.abs_y_pos = 180  # +200/2\n",
+    "move_to_absolute_x_y_z(COM_Ender, enderstat, print_msg=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cdf212f-ca72-4449-8658-1e510aa6f0b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
