--- a/developing.ipynb
+++ b/developing.ipynb
@@ -1494,7 +1494,7 @@
    "outputs": [],
    "source": [
     "# (burstcount, 256*SingleFrame())\n",
-    "#measurement_data"
+    "# measurement_data"
    ]
   },
   {
@@ -1638,21 +1638,25 @@
    "outputs": [],
    "source": [
     "def extract_potential_vals(\n",
-    "    single_meas: np.ndarray, ssms: ScioSpecMeasurementSetup, ret_sorted:bool = True\n",
+    "    single_meas: np.ndarray, ssms: ScioSpecMeasurementSetup, ret_sorted: bool = True\n",
     ") -> np.ndarray:\n",
     "    n_ch_el = 16  # constant, because each channel has only 16 electrodes.\n",
     "    pot_matrix = np.empty((single_meas.shape[0], n_ch_el), dtype=complex)\n",
     "    pot_matrix_sorted = np.empty((ssms.n_el, ssms.n_el), dtype=complex)\n",
-    "    \n",
+    "\n",
     "    for idx, single_frame in enumerate(single_meas):\n",
     "        for el in range(n_ch_el):\n",
     "            pot_matrix[idx, el] = single_frame.__dict__[f\"ch_{el+1}\"]\n",
     "\n",
     "    pot_matrix = np.reshape(np.concatenate(pot_matrix), newshape=(ssms.n_el, ssms.n_el))\n",
-    "    sort_idx = [single_meas[i].channel_group-1 for i in range(len(ssms.channel_group))]\n",
+    "    sort_idx = [\n",
+    "        single_meas[i].channel_group - 1 for i in range(len(ssms.channel_group))\n",
+    "    ]\n",
     "\n",
     "    for idx, s_idx in enumerate(sort_idx):\n",
-    "        pot_matrix_sorted[:,idx*n_ch_el:(idx+1)*n_ch_el] = pot_matrix[:,s_idx*n_ch_el:(s_idx+1)*n_ch_el]\n",
+    "        pot_matrix_sorted[:, idx * n_ch_el : (idx + 1) * n_ch_el] = pot_matrix[\n",
+    "            :, s_idx * n_ch_el : (s_idx + 1) * n_ch_el\n",
+    "        ]\n",
     "    if ret_sorted:\n",
     "        return pot_matrix_sorted\n",
     "    else:\n",
