--- a/developing.ipynb
+++ b/developing.ipynb
@@ -1312,7 +1312,7 @@
     ")\n",
     "from sciopy.sciopy_dataclasses import ScioSpecMeasurementSetup\n",
     "\n",
-    "from src.usb_hs_handling import (\n",
+    "from sciopy import (\n",
     "    StartStopMeasurement_usb_hs,\n",
     "    SystemMessageCallback_usb_hs,\n",
     "    connect_COM_port_usb_hs,\n",
