--- a/measurement.ipynb
+++ b/measurement.ipynb
@@ -28,7 +28,14 @@
     "    print_coordinates_props,\n",
     "    save_parameters_to_json_file,\n",
     ")\n",
-    "from src.visualization import plot_meas_coords, plot_meas_coords_wball"
+    "from src.visualization import plot_meas_coords, plot_meas_coords_wball\n",
+    "\n",
+    "from sciopy import (\n",
+    "    StartStopMeasurement_usb_hs,\n",
+    "    SystemMessageCallback_usb_hs,\n",
+    "    connect_COM_port_usb_hs,\n",
+    "    set_measurement_config_usb_hs,\n",
+    ")"
    ]
   },
   {
