inserted connection parameters

--- a/measurement.ipynb
+++ b/measurement.ipynb
@@ -20,7 +20,7 @@
     "from sciopy import available_serial_ports, connect_COM_port\n",
     "from sciopy.sciopy_dataclasses import ScioSpecMeasurementSetup\n",
     "\n",
-    "from src.classes import BallObjectProperties, HitBox, TankProperties32x2\n",
+    "from src.classes import BallObjectProperties, HitBox, TankProperties32x2, Ender5Stat\n",
     "from src.functions import (\n",
     "    compute_hitbox,\n",
     "    create_meas_coordinates,\n",
@@ -35,7 +35,14 @@
     "    SystemMessageCallback_usb_hs,\n",
     "    connect_COM_port_usb_hs,\n",
     "    set_measurement_config_usb_hs,\n",
-    ")"
+    "    available_serial_ports,\n",
+    "    del_hex_in_list,\n",
+    "    reshape_full_message_in_bursts,\n",
+    "    split_bursts_in_frames,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "from src.ender5 import init_ender5, x_y_z_home"
    ]
   },
   {
@@ -178,7 +185,7 @@
    "id": "ef0bceba-7891-4697-8c89-55cc304790dc",
    "metadata": {},
    "source": [
-    "## (TBS) Connect devices\n",
+    "## Connect Devices\n",
     "\n",
     "- Create 3D objects\n",
     "- Init Ender 5\n",
@@ -194,7 +201,94 @@
    "id": "9017c62a-31ca-4eb4-b72c-b0f64b86d256",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "COM_Ender = connect_COM_port(port=\"COM4\", baudrate=115200)\n",
+    "COM_Sciospec = connect_COM_port_usb_hs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6401857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enderstat = Ender5Stat(\n",
+    "    abs_x_pos=None,\n",
+    "    abs_y_pos=None,\n",
+    "    abs_z_pos=None,\n",
+    "    tank_architecture=TankProperties32x2(),\n",
+    "    motion_speed=2_500,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44c08629",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# init axis\n",
+    "init_ender5(COM_Ender, enderstat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb72b3a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# validate mid position\n",
+    "x_y_z_home(COM_Ender, enderstat, print_msg=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24fdd02b",
+   "metadata": {},
+   "source": [
+    "## Set Sciospec Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dde0e50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_measurement_config_usb_hs(COM_Sciospec, ssms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c51c6f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read out system callback\n",
+    "SystemMessageCallback_usb_hs(COM_Sciospec, prnt_msg=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4547c88e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start and stop single measurement\n",
+    "measurement_data_hex = StartStopMeasurement_usb_hs(COM_Sciospec)\n",
+    "# Delete hex in mesured buffer\n",
+    "measurement_data = del_hex_in_list(measurement_data_hex)\n",
+    "\n",
+    "measurement_data = split_bursts_in_frames(\n",
+    "    split_measurement_data, sciospec_measurement_setup\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
