implemented 3d point cloud representation

--- a/measurement.ipynb
+++ b/measurement.ipynb
@@ -17,10 +17,23 @@
    },
    "outputs": [],
    "source": [
-    "from sciopy import available_serial_ports, connect_COM_port\n",
-    "from sciopy.sciopy_dataclasses import ScioSpecMeasurementSetup\n",
     "import time\n",
-    "from src.classes import BallObjectProperties, HitBox, TankProperties32x2, Ender5Stat\n",
+    "\n",
+    "from sciopy import (\n",
+    "    StartStopMeasurement_usb_hs,\n",
+    "    SystemMessageCallback_usb_hs,\n",
+    "    available_serial_ports,\n",
+    "    connect_COM_port,\n",
+    "    connect_COM_port_usb_hs,\n",
+    "    del_hex_in_list,\n",
+    "    reshape_full_message_in_bursts,\n",
+    "    set_measurement_config_usb_hs,\n",
+    "    split_bursts_in_frames,\n",
+    ")\n",
+    "from sciopy.sciopy_dataclasses import ScioSpecMeasurementSetup\n",
+    "\n",
+    "from src.classes import BallAnomaly, Ender5Stat, HitBox, TankProperties32x2\n",
+    "from src.ender5 import init_ender5, move_ender_to_coordinate, x_y_z_home\n",
     "from src.functions import (\n",
     "    compute_hitbox,\n",
     "    create_meas_coordinates,\n",
@@ -28,21 +41,7 @@
     "    print_coordinates_props,\n",
     "    save_parameters_to_json_file,\n",
     ")\n",
-    "from src.visualization import plot_meas_coords, plot_meas_coords_wball\n",
-    "\n",
-    "from sciopy import (\n",
-    "    StartStopMeasurement_usb_hs,\n",
-    "    SystemMessageCallback_usb_hs,\n",
-    "    connect_COM_port_usb_hs,\n",
-    "    set_measurement_config_usb_hs,\n",
-    "    available_serial_ports,\n",
-    "    del_hex_in_list,\n",
-    "    reshape_full_message_in_bursts,\n",
-    "    split_bursts_in_frames,\n",
-    ")\n",
-    "\n",
-    "\n",
-    "from src.ender5 import init_ender5, x_y_z_home, move_ender_to_coordinate"
+    "from src.visualization import plot_meas_coords, plot_meas_coords_wball"
    ]
   },
   {
@@ -65,7 +64,7 @@
     "# init tank\n",
     "tank = TankProperties32x2()\n",
     "# init ball\n",
-    "ball = BallObjectProperties(x=0, y=0, z=0, r=30, material=None)\n",
+    "ball = BallAnomaly(x=0, y=0, z=0, r=30, perm=10, material=None)\n",
     "# init hitbox\n",
     "hitbox = compute_hitbox(tank, ball, safety_tolerance=0)\n",
     "# set sciospec measurement properties\n",
@@ -241,10 +240,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import serial\n",
-    "import numpy as np\n",
-    "from src.ender5 import move_to_absolute_x_y_z\n",
     "import time\n",
+    "\n",
+    "import numpy as np\n",
+    "import serial\n",
+    "\n",
+    "from src.ender5 import move_to_absolute_x_y_z\n",
     "\n",
     "\n",
     "def move_ender_to_coordinate(\n",
@@ -358,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
