--- a/measurement.ipynb
+++ b/measurement.ipynb
@@ -43,7 +43,7 @@
     "    move_ender_to_coordinate,\n",
     "    move_to_absolute_x_y_z,\n",
     "    x_y_z_home,\n",
-    "    read_temperature\n",
+    "    read_temperature,\n",
     ")\n",
     "from src.functions import (\n",
     "    compute_hitbox,\n",
@@ -496,6 +496,7 @@
     "    # update ball position\n",
     "    ball.x, ball.y, ball.z = XYZ\n",
     "    mesh_obj = set_perm(mesh_obj, ball)\n",
+    "    plot_mesh(mesh_obj, tank, show_tank_brdr=True)\n",
     "    # move to position\n",
     "    move_ender_to_coordinate(COM_Ender, XYZ, enderstat, print_msg=True)\n",
     "    time.sleep(3)\n",
@@ -555,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
