prep for further processing

--- a/measurement.ipynb
+++ b/measurement.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "b20820f5-2dff-45e6-a95b-122103a3eaec",
    "metadata": {
     "tags": []
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "67117275-508f-417c-9aa6-3f200b3021a4",
    "metadata": {
     "tags": []
@@ -79,11 +79,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TankProperties32x2(T_d=194, T_r=97, T_bx=(-97.0, 97.0), T_by=(-97.0, 97.0), T_bz=(0, 148), E_zr1=50, E_zr2=100, n_el=64)\n",
+      "TankProperties32x2(T_d=194, T_r=97, T_bx=(-97.0, 97.0), T_by=(-97.0, 97.0), T_bz=(0, 140), E_zr1=50, E_zr2=100, n_el=64)\n",
       "BallAnomaly(x=0, y=0, z=0, d=30, perm=10, material='acryl')\n",
-      "HitBox(r_min=0, r_max=77.0, x_min=-77.0, x_max=77.0, y_min=-77.0, y_max=77.0, z_min=20.0, z_max=128.0)\n",
+      "HitBox(r_min=0, r_max=77.0, x_min=-77.0, x_max=77.0, y_min=-77.0, y_max=77.0, z_min=20.0, z_max=105.0)\n",
       "ScioSpecMeasurementSetup(burst_count=5, total_meas_num=10, n_el=64, channel_group=[1, 2, 3, 4], exc_freq=20000, framerate=5, amplitude=0.01, inj_skip=8, gain=1, adc_range=1, notes='test measurement', configured=True)\n",
-      "MeasurementInformation(saline=(0.0, '[mS]'), saline_height=(0.0, '[mm]'), temperature=(0.0, '[°C]'), timestamp='13_11_2023_15h_09m')\n"
+      "MeasurementInformation(saline=(0.0, '[mS]'), saline_height=(0.0, '[mm]'), temperature=(0.0, '[°C]'), timestamp='13_11_2023_16h_42m')\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "b218618b-c3b4-4b6c-9fd8-44a8ba117bfb",
    "metadata": {
     "tags": []
@@ -149,7 +149,7 @@
       "--------------------------------------\n",
       "min:-77.00\tmax: 77.00\n",
       "min:-77.00\tmax: 77.00\n",
-      "min:20.00\tmax: 128.00\n",
+      "min:20.00\tmax: 105.00\n",
       "\n",
       "shape (15, 3)\n"
      ]
@@ -308,7 +308,7 @@
    ],
    "source": [
     "# move to home position\n",
-    "x_y_z_home(COM_Ender, enderstat, print_msg=True)"
+    "# x_y_z_home(COM_Ender, enderstat, print_msg=True)"
    ]
   },
   {
@@ -375,6 +375,28 @@
     "enderstat.abs_x_pos = 180\n",
     "enderstat.abs_z_pos = 50\n",
     "move_to_absolute_x_y_z(COM_Ender, enderstat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dc70d35b-c663-44c6-af90-71e1521b84e4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In total this measurement will create 75 samples.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    f\"In total this measurement will create {ssms.burst_count*coordinates.shape[0]} samples.\"\n",
+    ")"
    ]
   },
   {
