--- a/postprocessing.ipynb
+++ b/postprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "72d9af00-7e71-4f41-b35c-2cdc7be4973e",
    "metadata": {
     "tags": []
@@ -15,14 +15,17 @@
     "from src.dataprocessing import (\n",
     "    get_BallAnomaly_properties,\n",
     "    get_channel_group,\n",
+    "    get_config,\n",
     "    get_excitation_stages,\n",
     "    get_inj_pattern,\n",
     "    get_measured_potential,\n",
     "    get_mesh,\n",
     "    get_sample,\n",
     "    get_trajectory,\n",
-    "    get_config,\n",
+    "    prepare_csv_conv,\n",
     "    temperature_history,\n",
+    "    write_top_csv_row,\n",
+    "    parse_npzdata_in_csv,\n",
     ")\n",
     "from src.functions import create_mesh\n",
     "from src.visualization import plot_mesh"
@@ -246,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Measured on channel group: 1.\n"
+      "Measured on channel group: 1\n"
      ]
     }
    ],
@@ -280,37 +283,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "95b623d6-514a-4242-b61b-f2249a461393",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ScioSpecMeasurementSetup(burst_count=5, total_meas_num=10, n_el=64, channel_group=[1, 2, 3, 4], exc_freq=20000, framerate=5, amplitude=0.01, inj_skip=8, gain=1, adc_range=1, notes='test measurement', configured=True)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_config(tmp)"
+    "config = get_config(tmp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "434ea1af-3959-4734-93af-826016833790",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "exc_stgs = get_excitation_stages(tmp)"
+    "exc_stgs = get_excitation_stages(tmp)\n",
+    "exc_stgs"
    ]
   }
  ],
