--- a/postprocessing.ipynb
+++ b/postprocessing.ipynb
@@ -26,6 +26,7 @@
     "    temperature_history,\n",
     "    write_top_csv_row,\n",
     "    parse_npzdata_in_csv,\n",
+    "    gif_inj_stages,\n",
     ")\n",
     "from src.functions import create_mesh\n",
     "from src.visualization import plot_mesh"
@@ -274,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
