updated measurement for system crash

--- a/measurement.ipynb
+++ b/measurement.ipynb
@@ -22,6 +22,7 @@
     "\n",
     "import numpy as np\n",
     "from sciopy import (\n",
+    "    SoftwareReset_usb_hs,\n",
     "    SystemMessageCallback_usb_hs,\n",
     "    available_serial_ports,\n",
     "    connect_COM_port,\n",
@@ -30,7 +31,10 @@
     "    set_measurement_config_usb_hs,\n",
     "    split_bursts_in_frames,\n",
     ")\n",
+    "\n",
+    "# pip install -i https://test.pypi.org/simple/ sciopy\n",
     "from sciopy.sciopy_dataclasses import ScioSpecMeasurementSetup\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from src.classes import (\n",
     "    BallAnomaly,\n",
@@ -85,8 +89,8 @@
     "# init hitbox\n",
     "hitbox = compute_hitbox(tank, ball, safety_tolerance=10.0)\n",
     "# set min and max z-pos to ball.d/2\n",
-    "hitbox.z_min = tank.E_zr1 - ball.d /4\n",
-    "hitbox.z_max = tank.E_zr2 + ball.d /4\n",
+    "hitbox.z_min = tank.E_zr1 - ball.d / 4\n",
+    "hitbox.z_max = tank.E_zr2 + ball.d / 4\n",
     "# set sciospec measurement properties\n",
     "ssms = ScioSpecMeasurementSetup(\n",
     "    burst_count=5,  # The number of measurements to be performed.\n",
@@ -134,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coordinates = np.round(coordinates,1)\n",
+    "coordinates = np.round(coordinates, 1)\n",
     "coordinates"
    ]
   },
@@ -386,11 +390,11 @@
     "for XYZ in tqdm(coordinates):\n",
     "    # update ball position\n",
     "    ball.x, ball.y, ball.z = XYZ\n",
-    "    #mesh_obj = set_perm(mesh_obj, ball)\n",
-    "    #plot_mesh(mesh_obj, tank, show_tank_brdr=True)\n",
+    "    # mesh_obj = set_perm(mesh_obj, ball)\n",
+    "    # plot_mesh(mesh_obj, tank, show_tank_brdr=True)\n",
     "    # move to position\n",
     "    move_ender_to_coordinate(COM_Ender, XYZ, enderstat, print_msg=False)\n",
-    "    #time.sleep(4)\n",
+    "    time.sleep(1)\n",
     "    # update documentation\n",
     "    documentation.temperature = read_temperature(COM_Ender)\n",
     "    current_time = datetime.now()\n",
@@ -399,23 +403,12 @@
     "    try:\n",
     "        sciospec_data = sciospec_measurement(COM_Sciospec, ssms)\n",
     "    except BaseException:\n",
-    "        #SystemMessageCallback(COM_ScioSpec)\n",
-    "        #time.sleep(5)\n",
-    "        #SoftwareReset(COM_ScioSpec)\n",
-    "        #time.sleep(10)\n",
-    "        #COM_ScioSpec = connect_COM_port(COM_ScioSpec.name)\n",
-    "        #time.sleep(2)\n",
-    "        #SystemMessageCallback(COM_ScioSpec)\n",
-    "        #scio_spec_measurement_config = conf_n_el_16_opposite(\n",
-    "        #    COM_ScioSpec, scio_spec_measurement_config\n",
-    "        #)\n",
-    "        time.sleep(1)\n",
-    "        SystemMessageCallback(COM_ScioSpec)\n",
-    "        time.sleep(4)\n",
-    "        SystemMessageCallback_usb_hs(COM_Sciospec, prnt_msg=True)\n",
-    "        time.sleep(1)\n",
+    "        SoftwareReset_usb_hs(COM_Sciospec)\n",
+    "        SystemMessageCallback_usb_hs(COM_ScioSpec)\n",
+    "        COM_ScioSpec = connect_COM_port_usb_hs(COM_ScioSpec.name)\n",
+    "        time.sleep(2)\n",
+    "        SystemMessageCallback_usb_hs(COM_ScioSpec)\n",
     "        set_measurement_config_usb_hs(COM_Sciospec, ssms)\n",
-    "        time.sleep(1)\n",
     "        SystemMessageCallback_usb_hs(COM_Sciospec, prnt_msg=True)\n",
     "        time.sleep(1)\n",
     "        sciospec_data = sciospec_measurement(COM_Sciospec, ssms)\n",
@@ -446,11 +439,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enderstat.abs_x_pos = 160\n",
-    "enderstat.abs_x_pos = 160\n",
+    "enderstat.abs_x_pos = 180\n",
+    "enderstat.abs_x_pos = 180\n",
     "enderstat.abs_z_pos = 150\n",
     "enderstat.motion_speed = 1500\n",
-    "move_to_absolute_x_y_z(COM_Ender, enderstat)"
+    "move_to_absolute_x_y_z(COM_Ender, enderstat)\n",
+    "time.sleep(10)"
    ]
   },
   {
@@ -489,7 +483,8 @@
     "    documentation,\n",
     "    sample_preamble=\"after\",\n",
     "    tank=tank,\n",
-    ")"
+    ")\n",
+    "time.sleep(10)"
    ]
   },
   {
@@ -503,14 +498,6 @@
     "rename_savedir(s_path, ball=ball, ssms=ssms)\n",
     "# x_y_z_home(COM_Ender, enderstat)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89d60ff3-9874-4499-adcb-af10a4a5e328",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -529,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
