ieee mapper save

--- a/3d_vae.ipynb
+++ b/3d_vae.ipynb
@@ -1569,6 +1569,7 @@
     "phi_scaler = tf.keras.layers.Normalization()\n",
     "phi_scaler.adapt(φ)\n",
     "\n",
+    "\n",
     "def mapper(input_shape=(4096,), latent_dim=8):\n",
     "    mapper_inputs = layers.Input(shape=input_shape)\n",
     "    x = phi_scaler(mapper_inputs)\n",
@@ -1579,7 +1580,7 @@
     "    x = layers.Dense(units=32, activation=\"relu\")(x)\n",
     "    # x = layers.Dense(2**7)(x)\n",
     "    x = layers.Dense(units=16, activation=\"relu\")(x)\n",
-    "        \n",
+    "\n",
     "    x = layers.Dense(latent_dim, activation=\"linear\")(x)\n",
     "\n",
     "    return Model(mapper_inputs, x)\n",
@@ -1934,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 95,
    "id": "66b5902d-760e-48ba-b2dd-ba28d9cd01ec",
    "metadata": {},
    "outputs": [],
@@ -2230,22 +2231,22 @@
     "    ax.voxels(voxel_matrix)\n",
     "    ax.set_xlabel(\"x\")\n",
     "    ax.set_ylabel(\"y\")\n",
-    "    ax.text(43, 43, 10, 'z', horizontalalignment='center')\n",
-    "    \n",
+    "    ax.text(43, 43, 10, \"z\", horizontalalignment=\"center\")\n",
     "\n",
-    "fig, axs = plt.subplots(1, 3, figsize=(9, 2.7), subplot_kw={'projection': '3d'})\n",
-    "for a, i in enumerate([237,287,4]):\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 3, figsize=(9, 2.7), subplot_kw={\"projection\": \"3d\"})\n",
+    "for a, i in enumerate([237, 287, 4]):\n",
     "    subplot_plot_voxel(axs[a], γ_test[i])\n",
-    "#axs[1].set_title('True')\n",
-    "#plt.tight_layout()\n",
+    "# axs[1].set_title('True')\n",
+    "# plt.tight_layout()\n",
     "plt.savefig(\"images/true_gamma.pdf\")\n",
     "plt.show()\n",
     "\n",
-    "fig, axs = plt.subplots(1, 3, figsize=(9, 2.7), subplot_kw={'projection': '3d'})\n",
-    "for a, i in enumerate([237,287,4]):\n",
+    "fig, axs = plt.subplots(1, 3, figsize=(9, 2.7), subplot_kw={\"projection\": \"3d\"})\n",
+    "for a, i in enumerate([237, 287, 4]):\n",
     "    subplot_plot_voxel(axs[a], γ_pred[i, :, :, :, 0])\n",
-    "#axs[1].set_title('Prediction')\n",
-    "#plt.tight_layout()\n",
+    "# axs[1].set_title('Prediction')\n",
+    "# plt.tight_layout()\n",
     "plt.savefig(\"images/pred_gamma.pdf\")\n",
     "plt.show()"
    ]
@@ -2395,9 +2396,9 @@
     "def compute_volume_error(true, pred):\n",
     "    v_err = list()\n",
     "    for i in range(γ_pred.shape[0]):\n",
-    "        ele_pred = len(np.where(pred[i, :, :, :, 0]!=0)[0])\n",
-    "        ele_true = len(np.where(true[i]!=0)[0])\n",
-    "        v_err.append(ele_pred-ele_true)\n",
+    "        ele_pred = len(np.where(pred[i, :, :, :, 0] != 0)[0])\n",
+    "        ele_true = len(np.where(true[i] != 0)[0])\n",
+    "        v_err.append(ele_pred - ele_true)\n",
     "    v_err = np.array(v_err)\n",
     "    return v_err"
    ]
@@ -2432,12 +2433,12 @@
    "source": [
     "plt.figure(figsize=(6, 3))\n",
     "sns.histplot(volumen_error, bins=25, kde=True)\n",
-    "plt.xlabel('Voxel element difference')\n",
-    "plt.xlim([-140,400])\n",
-    "plt.ylabel('Count')\n",
+    "plt.xlabel(\"Voxel element difference\")\n",
+    "plt.xlim([-140, 400])\n",
+    "plt.ylabel(\"Count\")\n",
     "plt.grid()\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(\"images/voxel_element_deviation.pdf\")\n",
+    "# plt.savefig(\"images/voxel_element_deviation.pdf\")\n",
     "# Show the plot\n",
     "plt.show()"
    ]
