Final IEEE version

--- a/3d_vae.ipynb
+++ b/3d_vae.ipynb
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "id": "58ca8f0c-642a-4386-87a1-3dcc67fa2a99",
    "metadata": {},
    "outputs": [
@@ -2234,8 +2234,10 @@
     "    ax.text(43, 43, 10, \"z\", horizontalalignment=\"center\")\n",
     "\n",
     "\n",
+    "selected = [237, 287, 4]\n",
+    "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(9, 2.7), subplot_kw={\"projection\": \"3d\"})\n",
-    "for a, i in enumerate([237, 287, 4]):\n",
+    "for a, i in enumerate(selected):\n",
     "    subplot_plot_voxel(axs[a], γ_test[i])\n",
     "# axs[1].set_title('True')\n",
     "# plt.tight_layout()\n",
@@ -2243,12 +2245,18 @@
     "plt.show()\n",
     "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(9, 2.7), subplot_kw={\"projection\": \"3d\"})\n",
-    "for a, i in enumerate([237, 287, 4]):\n",
+    "for a, i in enumerate(selected):\n",
     "    subplot_plot_voxel(axs[a], γ_pred[i, :, :, :, 0])\n",
     "# axs[1].set_title('Prediction')\n",
     "# plt.tight_layout()\n",
     "plt.savefig(\"images/pred_gamma.pdf\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# save data\n",
+    "# np.savez(\n",
+    "#    \"measurements/saves/subplot_voxel.npz\",\n",
+    "#    gamma_test=γ_test[selected],\n",
+    "#    gamma_pred=γ_pred[selected,:,:,:,0],\n",
+    "# )"
    ]
   },
   {
@@ -2463,6 +2471,20 @@
     "print(\"std:\\t\", np.std(volumen_error))\n",
     "print(\"mean:\\t\", np.mean(volumen_error))\n",
     "print(\"var:\\t\", np.var(volumen_error))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "09429ce9-75f1-4047-b840-b24579e26661",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.savez(\n",
+    "#    \"measurements/saves/error.npz\",\n",
+    "#    pos_error=errors,\n",
+    "#    volumen_error=volumen_error,\n",
+    "# )"
    ]
   }
  ],
