--- a/measurement.ipynb
+++ b/measurement.ipynb
@@ -288,7 +288,7 @@
    ],
    "source": [
     "s_path, f_name = create_measurement_directory()\n",
-    "save_parameters_to_json_file(s_path, f_name,documentation, ssms, tank, ball, hitbox)"
+    "save_parameters_to_json_file(s_path, f_name, documentation, ssms, tank, ball, hitbox)"
    ]
   },
   {
@@ -536,8 +536,8 @@
    "source": [
     "# start full measurement\n",
     "samples_counter = 0\n",
-    "#for XYZ in coordinates):\n",
-    "for XYZ,XYZ_f in tqdm(zip(coordinates[:-1],coordinates[1:])):\n",
+    "# for XYZ in coordinates):\n",
+    "for XYZ, XYZ_f in tqdm(zip(coordinates[:-1], coordinates[1:])):\n",
     "    # print(XYZ)\n",
     "    # update ball position\n",
     "    ball.x, ball.y, ball.z = XYZ\n",
@@ -576,13 +576,15 @@
     "        SystemMessageCallback_usb_hs(COM_Sciospec, prnt_msg=False)\n",
     "    # compute moving time delay\n",
     "    distance = np.linalg.norm(XYZ_f - XYZ)\n",
-    "    moving_time = int(np.ceil((distance / enderstat.motion_speed) * 100)) + 1 # 1s tolerance\n",
+    "    moving_time = (\n",
+    "        int(np.ceil((distance / enderstat.motion_speed) * 100)) + 1\n",
+    "    )  # 1s tolerance\n",
     "    # print(distance,moving_time,\"s\")\n",
     "    # move to next position\n",
     "    move_ender_to_coordinate(COM_Ender, XYZ_f, enderstat, print_msg=False)\n",
     "    if moving_time > 4:\n",
     "        moving_time += 7\n",
-    "        #print(distance,moving_time,\"++s\")\n",
+    "        # print(distance,moving_time,\"++s\")\n",
     "    time.sleep(moving_time)"
    ]
   },
